# usersim

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Directory.Build.props  README.md  SUPPORT.md  usersim.sln  wdk.props
.github/: CODEOWNERS  build.yml  dependabot.yml
.github/workflows/: build.yml  codeql.yml  scorecards.yml
cxplat/: CMakeLists.txt
cxplat/cxplat_test/: CMakeLists.txt  cxplat_fault_injection.cpp  cxplat_fault_injection_test.cpp  cxplat_initialization_test.cpp  cxplat_memory_test.cpp  cxplat_module_test.cpp  cxplat_processor_test.cpp  cxplat_rundown_test.cpp  cxplat_size_test.cpp  cxplat_test.vcxproj  cxplat_test.vcxproj.filters  cxplat_time_test.cpp  cxplat_workitem_test.cpp
cxplat/inc/: cxplat.h  cxplat_common.h  cxplat_fault_injection.h  cxplat_memory.h  cxplat_module.h  cxplat_processor.h  cxplat_rundown.h  cxplat_size.h  cxplat_time.h  cxplat_workitem.h
cxplat/inc/winkernel/: cxplat_fault_injection.h  cxplat_platform.h  cxplat_winkernel.h
cxplat/inc/winuser/: cxplat_fault_injection.h  cxplat_passed_test_log.h  cxplat_platform.h  cxplat_winuser.h
cxplat/src/: CMakeLists.txt  common.h  memory.c  tags.h
cxplat/src/cxplat_winkernel/: CMakeLists.txt  cxplat_winkernel.c  cxplat_winkernel.vcxproj  cxplat_winkernel.vcxproj.filters  memory_winkernel.c  module_winkernel.c  packages.config  processor_winkernel.c  rundown_winkernel.c  size_winkernel.c  size_winkernel.cpp  time_winkernel.c  workitem_winkernel.c
cxplat/src/cxplat_winuser/: CMakeLists.txt  cxplat_winuser.cpp  cxplat_winuser.vcxproj  cxplat_winuser.vcxproj.filters  fault_injection.cpp  fault_injection.h  leak_detector.cpp  leak_detector.h  memory.cpp  memory_winuser.cpp  module_winuser.cpp  processor_winuser.cpp  rundown_winuser.cpp  size_winuser.c  size_winuser.cpp  symbol_decoder.h  time_winuser.cpp  winuser_internal.h  workitem_winuser.cpp
dll_skeleton/: dll_skeleton.cpp  dll_skeleton.vcxproj  dll_skeleton.vcxproj.filters
docs/: DevelopmentGuide.md  Governance.md  TestingGuide.md
inc/: TraceLoggingProvider.h  ndis.h  ntddk.h  wdf.h
inc/usersim/: common.h  etw.h  ex.h  fwp_test.h  io.h  ke.h  mm.h  ob.h  ps.h  rtl.h  se.h  wdf.h  zw.h
sample/: CMakeLists.txt  driver.c  sample.inf  sample.vcxproj  sample.vcxproj.filters
scripts/: .check-license.ignore  Test-FaultInjection.ps1
setup_build/: setup_build.vcxproj  setup_build.vcxproj.filters
src/: CMakeLists.txt  Source.def  dll_skeleton.c  dllmain.cpp  etw.cpp  ex.cpp  ex.h  fault_injection.cpp  fault_injection.h  framework.h  fwp_um.cpp  fwp_um.h  io.cpp  io.h  ke.cpp  ke.h  kernel_um.cpp  kernel_um.h  leak_detector.cpp  leak_detector.h  mm.cpp  mm.h  ndis.h  ndis_um.cpp  net_platform.h  nmr_impl.cpp  nmr_impl.h  nmr_um.cpp  ob.cpp  platform.h  platform_user.cpp  ps.cpp  ps.h  rtl.cpp  rtl.h  se.cpp  se.h  tags.h  tracelog.c  tracelog.h  (+6 more)
tests/: CMakeLists.txt  cxplat_size_test.cpp  etw_test.cpp  ex_test.cpp  io_test.cpp  ke_test.cpp  mm_test.cpp  nmr_test.cpp  ob_test.cpp  ps_test.cpp  rtl_test.cpp  se_test.cpp  tests.cpp  tests.vcxproj  tests.vcxproj.filters  wdf_test.cpp  zw_test.cpp
usersim_dll_skeleton/: CMakeLists.txt  dll_skeleton.c  dll_skeleton.cpp  dll_skeleton.h  usersim_dll_skeleton.vcxproj  usersim_dll_skeleton.vcxproj.filters
